cmake_minimum_required(VERSION 3.22.0)

project(Leetcode CXX)
set(CMAKE_CXX_STANDARD 20)


add_subdirectory("../utils" "libs/utils")
add_subdirectory("2) Add Two Numbers")
add_subdirectory("6) Zigzag Conversion")
add_subdirectory("22) Generate Parentheses")
add_subdirectory("27) Remove Element")
add_subdirectory("28) Find the Index of the First Occurrence in a String")
add_subdirectory("34) Find First and Last Position of Element in Sorted Array")
add_subdirectory("55) Jump Game")
add_subdirectory("88) Merge Sorted Array")
add_subdirectory("189) Rotate Array")
add_subdirectory("199) Binary Tree Right Side View")
add_subdirectory("208) Implement Trie (Prefix Tree)")
add_subdirectory("211) Design Add and Search Words Data Structure")
add_subdirectory("274) H-Index")
add_subdirectory("307) Range Sum Query - Mutable")
add_subdirectory("363) Max Sum of Rectangle No Larger Than K")
add_subdirectory("547) Number of Provinces")
add_subdirectory("732) My Calendar III")
add_subdirectory("802) Find Eventual Safe States")
add_subdirectory("997) Find the Town Judge")
#add_subdirectory("")
