cmake_minimum_required(VERSION 3.22.0)

project(Leetcode CXX)
set(CMAKE_CXX_STANDARD 20)

add_compile_options(-fsanitize=address)
add_link_options(-fsanitize=address)

add_subdirectory("../utils" "libs/utils")
add_subdirectory("2) Add Two Numbers")
add_subdirectory("3) Longest Substring Without Repeating Characters")
add_subdirectory("5) Longest Palindromic Substring")
add_subdirectory("6) Zigzag Conversion")
add_subdirectory("22) Generate Parentheses")
add_subdirectory("27) Remove Element")
add_subdirectory("28) Find the Index of the First Occurrence in a String")
add_subdirectory("34) Find First and Last Position of Element in Sorted Array")
add_subdirectory("55) Jump Game")
add_subdirectory("72) Edit Distance")
add_subdirectory("88) Merge Sorted Array")
add_subdirectory("93) Restore IP Addresses")
add_subdirectory("94) Binary Tree Inorder Traversal")
add_subdirectory("98) Validate Binary Search Tree")
add_subdirectory("125) Valid Palindrome")
add_subdirectory("146) LRU Cache")
add_subdirectory("189) Rotate Array")
add_subdirectory("199) Binary Tree Right Side View")
add_subdirectory("205) Isomorphic Strings")
add_subdirectory("208) Implement Trie (Prefix Tree)")
add_subdirectory("211) Design Add and Search Words Data Structure")
add_subdirectory("274) H-Index")
add_subdirectory("301) Remove Invalid Parentheses")
add_subdirectory("307) Range Sum Query - Mutable")
add_subdirectory("340) Longest Substring with At Most K Distinct Characters")
add_subdirectory("356) Line Reflection")
add_subdirectory("363) Max Sum of Rectangle No Larger Than K")
add_subdirectory("380) Insert Delete GetRandom O(1)")
add_subdirectory("395) Longest Substring with At Least K Repeating Characters")
add_subdirectory("443) String Compression")
add_subdirectory("485) Max Consecutive Ones")
add_subdirectory("487) Max Consecutive Ones II")
add_subdirectory("547) Number of Provinces")
add_subdirectory("560) Subarray Sum Equals K")
add_subdirectory("657) Robot Return to Origin")
add_subdirectory("658) Find K Closest Elements")
add_subdirectory("680) Valid Palindrome II")
add_subdirectory("692) Top K Frequent Words")
add_subdirectory("732) My Calendar III")
add_subdirectory("802) Find Eventual Safe States")
add_subdirectory("997) Find the Town Judge")
add_subdirectory("1216) Valid Palindrome III")
add_subdirectory("1329) Sort the Matrix Diagonally")
add_subdirectory("1615) Maximal Network Rank")
add_subdirectory("2215) Find the Difference of Two Arrays")
add_subdirectory("2241) Design an ATM Machine")
add_subdirectory("2657) Find the Prefix Common Array of Two Arrays")

add_executable(test test.cpp)
#add_subdirectory("")
